--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emis-rest-contract",
+  "name": "eims-rest-contract",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
